tests/untried/neg/t8229.scala
import Predef.{any2stringadd as _, *}

object Test {
  val o = new Object()
  o + ""
}
